added the first blog

--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=git add README.md, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> My first repo </title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first paragraph</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
+    </div>
+    <div>
+        <h3>My first paragraph</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
+    </div>
+    <div>
+        <h3>My first paragraph</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
+    </div>
 </body>
 </html>
