added the second blog

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
     </div>
     <div>
-        <h3>My first paragraph</h3>
+        <h3>My second paragraph</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
     </div>
     <div>
-        <h3>My first paragraph</h3>
+        <h3>My thirdgit paragraph</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
     </div>
 </body>
