--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My thirdgit paragraph</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nihil odit, itaque magnam error consectetur excepturi eveniet ipsam omnis, inventore deleniti quibusdam voluptatem provident at praesentium perspiciatis iste amet assumenda?</p>
     </div>
+        <div>
+            <h3>how to push incremental code</h3>
+            <ul >
+                <li>git add . </li>
+                <li>git commit -m" add a meaningful commit message"</li>
+                <li>git push</li>
+            </ul>
+        </div>
 </body>
 </html>
